<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_ortdo_novo" />

    <Button
        android:id="@+id/btnConteudo"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="154dp"
        android:background="#4682B4"
        android:drawableLeft="@drawable/ic_content"
        android:text="@string/conteudo"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:background="#4682B4"
        android:drawableLeft="@drawable/ic_quiz"
        android:text="@string/quiz"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="#4682B4"
        android:drawableLeft="@drawable/ic_perfil"
        android:text="@string/perfil"
        android:textColor="#FFFFFF" />
</RelativeLayout>
